--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@apify/eslint-config": "^1.0.0",
 		"@apify/tsconfig": "^0.1.1",
 		"@types/node": "^22.15.32",
+		"@types/yauzl": "^2.10.3",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
 		"globals": "^17.0.0",
